--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,15 @@
 /* load web font roboto*/
 @import url(http://fonts.googleapis.com/css?family=Roboto:300);
 
+/* load web font NotoSans */
+@font-face {
+  font-family: "NotoSans";
+  src: url('/fonts/NotoSansCJKjp-Light.eot');
+  src: url('/fonts/NotoSansCJKjp-Light.eot?#iefix') format('embedded-opentype'),
+       url('/fonts/NotoSansCJKjp-Light.woff') format('woff'),
+       url('/fonts/NotoSansCJKjp-Light.ttf')  format('truetype');
+}
+
 .material-icons {
   font-family: 'Material Icons';
   font-weight: normal;
@@ -33,7 +42,7 @@
 
 html, body{
     width: 100%;
-    font-family: 'Roboto', sans-serif;
+     font-family: 'Roboto', Roboto, 'NotoSans', NotoSans, sans-serif;
 }
 
 header.navbar {
@@ -63,4 +72,12 @@ table#newsIndexTable td{
 
 table button.btn {
 	margin: 0 2px;	
+}
+
+#send {
+  width: 100%;
+}
+
+.userName {
+  text-align: center;
 }
